<resources>
    <string name="app_name">StrokeTest</string>
    <string name="patient_data_layout">Данные пациента</string>
    <string name="second_name_layout">Фамилия</string>
    <string name="first_name_layout">Имя:</string>
    <string name="middle_name_layout">Отчество:</string>
    <string name="age_layout">Возраст:</string>
    <string name="gender_layout">Пол:</string>
    <string name="male">мужской</string>
    <string name="female">женский</string>
    <string name="next">Далее</string>
    <string name="set_frame_layuot">Выбор положения рамки</string>
    <string name="corner1">1</string>
    <string name="corner2">2</string>
    <string name="corner3">3</string>
    <string name="corner4">4</string>
    <string name="set_mode_layuot">Выбор режима</string>
    <string name="training_btn">Тренинг</string>
    <string name="test_btn">Тест</string>
    <string name="results_btn">Результаты</string>
    <string name="set_frame1">1 - Левый верхний угол</string>
    <string name="set_frame2">2 - Правый верхний угол</string>
    <string name="set_frame3">3 - Правый нижний угол</string>
    <string name="set_frame4">4 - Левый нижний угол</string>
    <string name="set_frame">Положение рамки:\u0020 </string>
    <string name="result">Результат:\u0020 </string>
    <string name="test_result">Тест выполнен.</string>
    <string name="test_not_result">Тест не выполнен.</string>
    <string name="time_over">Время закончилось.</string>
    <string name="time">Время:\u0020</string>
    <string name="seconds">\u0020 с</string>
    <string name="minutes">\u0020 мин\u0020 </string>
    <string name="hours">\u0020 ч \u0020 </string>
    <string name="count">Количество попаданий:\u0020</string>
    <string name="save_results">Результаты сохранены.</string>
    <string name="sd_card">SD-карта не доступна:\u0020</string>
    <string name="sd_error">Error</string>
    <string name="date">Дата: dd-MMM-yyyy Время: HH:mm:ss</string>
    <string name="header_results">---Результаты выполнения теста/тренинга---\n</string>
    <string name="patient_data">Данные пациента.\n</string>
    <string name="second_name">Фамилия:\u0020</string>
    <string name="first_name">Имя:\u0020</string>
    <string name="middle_name">Отчество:\u0020</string>
    <string name="age">Возраст:\u0020</string>
    <string name="gender">Пол:\u0020</string>
    <string name="mode_test">Режим: Тест\n</string>
    <string name="not_result">Результат: не выполнялся\n</string>
    <string name="not_set_frame">Положение рамки: нет.\n</string>
    <string name="time_test_str">Время теста: 0 с\n</string>
    <string name="time_training_str">Время тренинга: 0 с\n</string>
    <string name="mode_training">Режим: Тренинг\n</string>
    <string name="line_break">\n</string>
    <string name="mode_test_layout">Режим: Тест</string>
    <string name="results_layout">Результат: не выполнялся.</string>
    <string name="time_test_layout">Время теста: 0 с.</string>
    <string name="set_frame_not">Положение рамки:  нет.</string>
    <string name="mode_training_layout">Режим: Тренинг</string>
    <string name="time_training_layout">Время тренинга: 0 с.</string>
    <string name="save_btn">Сохранить</string>
    <string name="draw_test">Тест</string>
    <string name="draw_training">Тренинг</string>
    <string name="draw_timeTest">Время закончилось!</string>
    <string name="draw_testExecuted">\u0020\u0020Тест выполнен!</string>


</resources>
